--- a/siteuwu/Semaninha/index.html
+++ b/siteuwu/Semaninha/index.html
@@ -3,17 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>E mentira pô</title>
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <title>FAKE NEWS</title>
 </head>
 <body>
     <header>
+        <h3>
+            FAKE NEWS
+        </h3>
 
+        <img src="./img/Logo da semaninha.png">
     </header>
 
-    <main>
+    <main class="mainConteiner">
+        <section class="caixaSection">
+            <div class="caixa1">
+                <h1>
+                    Argumento 1
+                </h1>
+                <h3>
+                    Babymetal, estilizado como BABYMETAL, é um grupo japonês do gênero metal consistente de Su-metal (Suzuka Nakamoto), Moametal (Moa Kikuchi) e Momometal (Momoko Okazaki), gerenciado pela agência de talentos Amuse.[13][14] É considerada por muitos uma das principais bandas da nova geração do Metal.[15] Babymetal foi formado em 28 de novembro de 2010 como um subgrupo do grupo idol Sakura Gakuin, sob o conceito de "a fusão de metal e idol",[16][17] e lançou seu single de estreia independente "Doki Doki Morning" (2011), distribuído limitadamente em eventos ao vivo e online. Durante o ano de 2012 o grupo lançou dois singles independentes; "Babymetal × Kiba of Akiba", um split em colaboração à banda de metal alternativo Kiba of Akiba, e "Head Bangya!!", primeiro single solo lançado pelo grupo. Em janeiro de 2013, Babymetal fez sua estreia maior com o single "Ijime, Dame, Zettai", e mais tarde nesse ano veio a ser lançado o single "Megitsune", ambos adentrando entre os 10 mais vendidos durante a semana de lançamento, de acordo com a Oricon e entre os 20 de acordo com a Billboard Japan.
+                </h3>
+            </div>
 
+            <div class="caixa2">
+                <video controls>
+                    <source src="./video/Evanescence - Bring Me To Life (Official HD Music Video) - EvanescenceVEVO (720p, h264, youtube).mp4">
+                </video>
+            </div>
+        </section>
     </main>
 
     <footer>
